apps/platform/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: admin
  labels:
    app: homepage
  annotations:
    resource.twingate.com: "true"
    resource.twingate.com/name: "Infra · Homepage"
    resource.twingate.com/alias: "homepage.octolet.int"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: homepage
